# procura

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nixpacks.toml
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  enums.py  logging_config.py  main.py
backend/app/api/: auth.py  procurements.py  workflows.py
backend/app/core/: auth.py
backend/app/models/: __init__.py  contract.py  evaluation.py  procurement.py  proposal.py  rfp.py  user.py  workflow.py
backend/app/schemas/: auth.py  procurement.py  workflow.py
backend/app/schemas/ai/: contract.py  proposal.py  rfp.py
backend/app/services/: workflow_runner.py
backend/app/storage/: base.py  local.py
backend/app/workflows/: base.py  checkpointer.py
backend/app/workflows/contract/: graph.py  nodes.py  state.py
backend/app/workflows/evaluation/: graph.py  nodes.py  state.py
backend/app/workflows/proposal_intake/: graph.py  nodes.py  state.py
backend/app/workflows/rfp/: graph.py  nodes.py  state.py
frontend/: next.config.ts  package-lock.json  package.json  railway.toml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/components/: providers.tsx
frontend/components/layout/: Sidebar.tsx
frontend/components/workflow/: CheckpointHistory.tsx  OutputViewers.tsx  WorkflowExecutionViewer.tsx  WorkflowStepper.tsx
frontend/lib/: api.ts  auth.ts  sse.ts  utils.ts
frontend/types/: index.ts
(+7 files in other folders)
